// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionCheck VersionCheck renders correctly while pending 1`] = `<Loading />`;

exports[`VersionCheck VersionCheck renders correctly with an updateType 1`] = `<View />`;

exports[`VersionCheck alert matches last snapshot with a forced version update 1`] = `
Array [
  Array [
    "Force title",
    "Force message",
    Array [
      Object {
        "onPress": [Function],
        "text": "Update Now",
      },
    ],
    Object {
      "cancelable": false,
    },
  ],
]
`;

exports[`VersionCheck alert matches last snapshot with a suggested version update 1`] = `
Array [
  Array [
    "Suggested update title",
    "Suggested update message",
    Array [
      Object {
        "onPress": [Function],
        "text": "Update Now",
      },
    ],
    Object {
      "cancelable": false,
    },
  ],
]
`;

exports[`VersionCheck alert matches last snapshot without a version update 1`] = `Array []`;

exports[`VersionCheck renders correctly without an update 1`] = `<View />`;
